فيديو معدل مع كلمة PAYGO

--- a/index.html
+++ b/index.html
@@ -39,58 +39,14 @@
             height: 100%;
             object-fit: cover;
         }
-
-        /* نص PAYGO فوق الفيديو */
-        .paygo-overlay {
-            position: absolute;
-            bottom: 35%;
-            left: 50%;
-            transform: translateX(-50%);
-            font-size: 120px;
-            font-weight: 900;
-            letter-spacing: 25px;
-            color: transparent;
-            background: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?w=800&q=80') center/cover;
-            -webkit-background-clip: text;
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
-            text-transform: uppercase;
-            font-family: 'Arial Black', sans-serif;
-            z-index: 10;
-        }
-
-        /* إخفاء كلمة TRAVEL الأصلية */
-        .splash-video {
-            filter: brightness(1);
-        }
-
-        /* Responsive */
-        @media (max-width: 768px) {
-            .paygo-overlay {
-                font-size: 80px;
-                letter-spacing: 18px;
-                bottom: 30%;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .paygo-overlay {
-                font-size: 55px;
-                letter-spacing: 12px;
-                bottom: 28%;
-            }
-        }
     </style>
 </head>
 <body>
     <div class="splash-container" id="splashScreen">
-        <!-- الفيديو -->
+        <!-- الفيديو المعدل -->
         <video class="splash-video" autoplay muted playsinline id="splashVideo">
-            <source src="splash-video.mp4" type="video/mp4">
+            <source src="splash-paygo.mp4" type="video/mp4">
         </video>
-
-        <!-- نص PAYGO فوق الفيديو -->
-        <div class="paygo-overlay">PAYGO</div>
     </div>
 
     <script>
