إضافة شعار PAYGO في header

--- a/main.html
+++ b/main.html
@@ -407,7 +407,7 @@
     <div class="container">
         <header class="header">
             <div class="logo">
-                <i class="fas fa-plane"></i> Paygo.com
+                <img src="paygo-logo.png" alt="PAYGO" style="height: 60px; width: auto;">
             </div>
             <div class="booking-badge">
                 <i class="fas fa-hotel"></i>
