--- a/main.html
+++ b/main.html
@@ -30,13 +30,13 @@
             background: rgba(255, 255, 255, 0.95);
             backdrop-filter: blur(10px);
             border-radius: 20px;
-            padding: 20px 30px;
+            padding: 15px;
             margin-bottom: 30px;
             box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
-            flex-wrap: wrap;
+            height: 80px;
         }
 
         .logo {
@@ -406,13 +406,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <div class="logo">
-                <img src="paygo-logo.png" alt="PAYGO" style="height: 60px; width: auto;">
-            </div>
-            <div class="booking-badge">
-                <i class="fas fa-hotel"></i>
-                بدعم من Booking.com
-            </div>
+            <img src="paygo-logo.png" alt="PAYGO" style="width: 100%; height: 100%; object-fit: contain; padding: 10px;">
         </header>
 
         <main class="main-card">
