تكبير شعار PAYGO ليملأ header

--- a/main.html
+++ b/main.html
@@ -30,13 +30,13 @@
             background: rgba(255, 255, 255, 0.95);
             backdrop-filter: blur(10px);
             border-radius: 20px;
-            padding: 15px;
+            padding: 10px 20px;
             margin-bottom: 30px;
             box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 80px;
+            height: 100px;
         }
 
         .logo {
@@ -406,7 +406,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <img src="paygo-logo.png" alt="PAYGO" style="width: 100%; height: 100%; object-fit: contain; padding: 10px;">
+            <img src="paygo-logo.png" alt="PAYGO" style="max-width: 100%; height: 100%; object-fit: contain;">
         </header>
 
         <main class="main-card">
