--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+    <meta name="domain-verification" content="b23f4075f2c168d8ef9b3eb6654f6528c1059def173adc0021cfeab47283a1c3">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PAYGO - حجز الفنادق</title>
